<resources>
    <string name="app_name">Cat&amp;Dog Translator</string>
    <string name="content_training_01_01">How to serve the food?</string>
    <string name="content_training_01_02">- Establish a regular feeding schedule for your dog and stick to it. This will help your dog learn when to expect food and avoid begging or scavenging at other times.</string>
    <string name="content_training_01_03">"- Choose a quiet and comfortable spot for your dog's food bowl and water dish. Avoid placing them near distractions or sources of stress, such as loud noises, other pets, or children."</string>
    <string name="content_training_01_04">- Teach your dog to sit and wait before you give them their food. This will help him/ her develop impulse control and respect for you as the leader. You can use a cue word, such as wait or stay, and reward your dog with praise and the food when they obey.</string>
    <string name="content_training_01_05">- Avoid feeding your dog from the table or giving them human food scraps. This will prevent your dog from developing bad habits, such as begging, stealing, or being picky. It will also protect his/ her health, as some human foods can be toxic or harmful to dogs.</string>
    <string name="content_training_01_06">"- Monitor your dog's food intake and body condition. If your dog is overweight, underweight, or has any signs of illness, consult your veterinarian for advice on how to adjust his/ her diet and exercise. You can use a body condition score chart to assess his/ her weight and body fat."</string>
    <string name="content_training_01_07">Feeding Time</string>
    <string name="content_training_01_08">"Some people prefer to feed their dogs once a day, while others opt for twice or even three times a day. The best option depends on your dog's age, size, activity level and health condition. Generally speaking, puppies need more frequent meals than adult dogs, as they are growing and need more energy. Large breeds may also benefit from more frequent meals, as they are prone to bloating and gastric torsion if they eat too much at once. On the other hand, small breeds may do fine with one meal a day, as long as they have access to fresh water throughout the day."</string>
    <string name="content_training_01_09">The best time to feed your dog is usually in the morning and evening, before or after his/ her walks. Avoid feeding your dog right before or after strenuous exercise, as this can cause digestive problems or vomiting. Also, avoid feeding him/ her late at night, as this can interfere with their sleep cycle and metabolism.</string>
    <string name="content_training_01_1">One of the most important aspects of feeding your cat is portion control. Overfeeding your cat can lead to obesity, which can cause a variety of health problems. On the other hand, underfeeding your cat can also be harmful to their health. The amount of food your cat needs depends on their age, weight, and activity level. It’s a good idea to consult with your veterinarian to determine the appropriate amount of food for your cat.</string>
    <string name="content_training_01_10">Food Portion</string>
    <string name="content_training_01_11">"This can vary depending on the type and quality of food you are using, as well as your dog's weight, age, activity level and health condition. A good way to determine the right amount of food for your dog is to follow the feeding guidelines on the food package or consult with your veterinarian. You can also use a measuring cup or a scale to measure the food accurately."</string>
    <string name="content_training_01_12">"As a general rule of thumb, you should feed your dog about 2–3% of his/ her body weight per day. For example, if your dog weighs 10 kg (22 lbs), you should feed them about 200-300 grams (7-10 oz) of food per day. However, this is just an estimate and you may need to adjust it depending on your dog's individual needs. You should monitor your dog's body condition regularly and adjust the food portion accordingly. You can use a body condition score chart to assess if he/ she is underweight, overweight or ideal."</string>
    <string name="content_training_01_13">What Kind of Food?</string>
    <string name="content_training_01_14">"There are many types of dog food available in the market, such as dry kibble, wet canned food, raw food, home-cooked food and more. Each type has its own advantages and disadvantages, and you should choose the one that suits your dog's preferences and needs."</string>
    <string name="content_training_01_15">"- Dry kibble is the most common and convenient type of dog food. It is easy to store, measure and feed. It also helps keep your dog's teeth clean and healthy by scraping off plaque and tartar. However, dry kibble can also be high in carbohydrates and low in moisture, which can cause dehydration and obesity in some dogs. You should always provide fresh water for your dog when feeding them dry kibble."</string>
    <string name="content_training_01_16">- Wet canned food is another popular type of dog food. It is moist and palatable, which can entice picky eaters and stimulate his/ her appetite. It also provides more moisture for your dog, which can prevent dehydration and urinary tract infections. However, wet canned food can also be expensive and spoil quickly once opened. You should refrigerate any leftover wet canned food and use it within a few days.</string>
    <string name="content_training_01_17">- Raw food is a type of dog food that consists of raw meat, bones, organs and sometimes fruits and vegetables. It is based on the idea that dogs are carnivores and should eat what their ancestors ate in the wild. Raw food advocates claim that raw food provides more natural nutrition for dogs and can prevent or cure many health problems. However, raw food can also be risky and controversial, as it can contain harmful bacteria, parasites and toxins that can cause illness or death in dogs or humans. You should always handle raw food with care and hygiene, and consult with your veterinarian before feeding it to your dog.</string>
    <string name="content_training_01_18">"- Home-cooked food is a type of dog food that you prepare yourself using fresh ingredients. It can be a great way to customize your dog's diet according to their preferences and needs. It can also be cheaper and healthier than commercial dog food if done correctly. However, home-cooked food can also be time-consuming and complicated to prepare. You should also make sure that you are providing a balanced and complete diet for your dog that meets their nutritional requirements."</string>
    <string name="content_training_01_19">By following these tips, you can train your dog to eat well and stay healthy. Remember that every dog is different and may have different needs and preferences when it comes to food. Be patient and flexible with your dog and try to make mealtime a positive and enjoyable experience for both of you.</string>
    <string name="content_training_01_2">"When choosing food for your cat, it's important to select a high-quality, nutritious brand. Look for food that is specifically formulated for cats and contains all the essential nutrients they need, including proitein, fat, vitamins, and minerals. Avoid giving your cat table scraps or human food, as this can upset their digestive system and lead to obesity."</string>
    <string name="content_training_01_3">"Establishing a feeding schedule is also important to your cat's health. Cats are creatures of habits and prefer to eat at the same time every day. Divide your cat's daily food allowance into several meals throughout the day. Avoid free-feeding, or leaving food out all day, as this can lead to over eating."</string>
    <string name="content_training_05_01">Barking is a natural way for dogs to communicate with each other and with humans. However, excessive or inappropriate barking can be annoying, stressful and disruptive for you and your neighbors. If you want to stop your dog barking, you need to understand why they are barking and how to address the underlying causes.</string>
    <string name="content_training_05_02">- Alerting you to something or someone outside</string>
    <string name="content_training_05_03">- Expressing excitement or frustration</string>
    <string name="content_training_05_04">- Playing or having fun</string>
    <string name="content_training_05_05">- Feeling bored or lonely</string>
    <string name="content_training_05_06">- Feeling anxious or fearful</string>
    <string name="content_training_05_07">- Responding to other dogs or animals</string>
    <string name="content_training_05_08">Depending on the reason, you can use different strategies to stop your dog barking. Here are some general tips that can help:</string>
    <string name="content_training_05_09">Provide enough physical and mental stimulation</string>
    <string name="content_training_05_10">A tired dog is less likely to bark. Make sure your dog gets enough exercise, playtime and enrichment activities every day. You can also use interactive toys, puzzles and games to keep your dog busy and entertained.</string>
    <string name="content_training_05_11">Teach your dog the quiet command</string>
    <string name="content_training_05_12">This is a way to tell your dog to stop barking on cue. You can use a treat or a toy as a reward when your dog stops barking. Start by saying quiet when your dog is already quiet, then give him/ her the reward. Repeat this several times until your dog associates the word with the reward. Then, say quiet when your dog is barking, and wait for him/ her to stop. As soon as they stop, give your dog the reward. Gradually increase the duration of silence before giving the reward. You can also use a clicker to mark the desired behavior.</string>
    <string name="content_training_05_13">Ignore unwanted barking</string>
    <string name="content_training_05_14">Sometimes dogs bark to get your attention or to get something they want. If you respond to their barking by giving your dog what he/ she want, you are reinforcing their behavior. Instead, ignore his/ her barking and only give him/ herattention or rewards when they are quiet. Turn away from him/ her, walk away or leave the room if necessary. Do not yell at your dog or punish him/ her, as this can make him/ her more anxious or excited and increase their barking.</string>
    <string name="content_training_05_15">Manage the triggers that cause your dog to bark</string>
    <string name="content_training_05_16">If your dog barks at something or someone outside, you can reduce his/ her exposure to the trigger by closing the curtains, moving him/ her to another room or using a white noise machine to mask the sound. You can also desensitize your dog to the trigger by exposing him/ her to it gradually and rewarding him/ her for being calm and quiet. For example, if your dog barks at other dogs, you can start by showing him/ her pictures or videos of dogs at a distance and giving him/ her treats when she/ he do not bark. Then, you can move on to real dogs at a distance and gradually decrease the distance as your dog becomes more comfortable.</string>
    <string name="content_training_05_17">Seek professional help if needed</string>
    <string name="content_training_05_18">"If your dog's barking is caused by anxiety, fear or aggression, you may need to consult a veterinarian or a certified dog trainer or behaviorist. They can help you identify the root cause of your dog's barking and provide you with a personalized treatment plan that may include medication, behavior modification or training."</string>
    <string name="portion_control">Portion Control</string>
    <string name="choosing_the_right_food">Choosing the right food</string>
    <string name="feeding_schedule">Feeding schedule</string>
</resources>