<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_training_01_01"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_02"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_03"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_04"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_05"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_06"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/content_training_01_07"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_08"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_09"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/content_training_01_10"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_11"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_12"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/content_training_01_13"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_14"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_15"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_16"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_17"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_18"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_19"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />
</LinearLayout>