<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/portion_control"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/choosing_the_right_food"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_2"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/feeding_schedule"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/content_training_01_3"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />
</LinearLayout>